--- a/EmpresaImportadoraDC/appsettings.json
+++ b/EmpresaImportadoraDC/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnetionStrings": {
+    "conexion_sqlServer": "Data Source = DESKTOP-8AV50H9\\SQLEXPRESS01; Initial catalog = EmpresaImportadoraDC;Integrated Security=True"
+  }
