--- a/EmpresaImportadoraDC/EmpresaImportadoraDC.csproj
+++ b/EmpresaImportadoraDC/EmpresaImportadoraDC.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\NewFolder\**" />
+    <Content Remove="Views\NewFolder\**" />
+    <EmbeddedResource Remove="Views\NewFolder\**" />
+    <None Remove="Views\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
@@ -17,7 +24,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Abstract\" />
-    <Folder Include="Views\NewFolder\" />
   </ItemGroup>
 
 </Project>
