--- a/EmpresaImportadoraDC/EmpresaImportadoraDC.csproj
+++ b/EmpresaImportadoraDC/EmpresaImportadoraDC.csproj
@@ -6,12 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\NewFolder\**" />
+    <Content Remove="Views\NewFolder\**" />
+    <EmbeddedResource Remove="Views\NewFolder\**" />
+    <None Remove="Views\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\Abstract\" />
-    <Folder Include="Views\NewFolder\" />
   </ItemGroup>
 
 </Project>
