--- a/EmpresaImportadoraDC/appsettings.json
+++ b/EmpresaImportadoraDC/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnetionStrings": {
-    "conexion_sqlServer": "Data Source = DESKTOP-8AV50H9\\SQLEXPRESS01; Initial catalog = EmpresaImportadoraDC;Integrated Security=True"
+    "conexion_sqlServer": "Data Source = JEFRY; Initial catalog = EmpresaImportadoraDC;Integrated Security=True"
   }
+}
