--- a/EmpresaImportadoraDC/appsettings.json
+++ b/EmpresaImportadoraDC/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnetionStrings": {
-    "conexion_sqlServer": "Data Source = JEFRY; Initial catalog = EmpresaImportadoraDC;Integrated Security=True"
+    "conexion_sqlServer": "Data Source = DESKTOP-NVGFCVB; Initial catalog = EmpresaImportadoraDC;Integrated Security=True"
   }
 }
